Fix navbar scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -246,9 +246,19 @@ html,
 }
 
 @media (max-width:992px) {
+    #navbar {
+        overflow: scroll;
+        height: 100%;
+    }
+
+    #toggle {
+        position: absolute;
+        left: 10px;
+        top: 10px;
+    }
+
     #navbarNav {
         background-color: #0F2E51;
-        /* text-align: center; */
         position: absolute;
         left: 0;
         top: 0;
